fix front end text overflow

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -205,6 +205,7 @@ $green: #0C9463 !default;
   background-color: $color;
   position: absolute;
   width: calc(100% + 10px);
+  height: auto;
   margin: 0;
   left: -10px;
   z-index: 100;
@@ -248,9 +249,10 @@ $green: #0C9463 !default;
   }
 
   h6 {
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
     margin: 0;
-    line-height: 0;
-    margin-bottom: .7em;
   }
 
   small {
